[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyutils"
version = "1.0.0"
description = "Core utilities, types, and plotting for atmospheric science"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Charles Davis", email = "cmdavis4@colostate.edu"}
]
keywords = ["atmospheric-science", "utilities", "plotting", "types", "meteorology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typing-extensions; python_version<'3.10'",
    "numpy",
    "matplotlib>=3.0",
    "xarray",
    "metpy",
    "tqdm",
    "imageio",
]

[project.optional-dependencies]
pandas = [
    "pandas",
]
netcdf = [
    "netcdf4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
all = [
    "pandas",
    "netcdf4",
]

[project.urls]
Homepage = "https://github.com/cmdavis4/skyutils"
"Bug Tracker" = "https://github.com/cmdavis4/skyutils/issues"
Documentation = "https://github.com/cmdavis4/skyutils#readme"
"Source Code" = "https://github.com/cmdavis4/skyutils"

[tool.setuptools]
packages = ["skyutils", "skyutils.plotting"]

[tool.setuptools.package-data]
skyutils = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
